syntax = "proto3";

package kiae;

import "google/protobuf/field_mask.proto";

option go_package = "github.com/kiaedev/kiae/api/kiae";

message IdRequest {
    string id = 1;
}