syntax = "proto3";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/openkos/openkos/api/app";
package app;

service AppService {
  rpc Sync(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc List(ListRequest) returns(ListResponse){
    option (google.api.http) = {
      get: "/api/v1/apps"
    };
  }
  rpc Install (AppOpRequest) returns (AppOpReply) {}
  rpc Uninstall (AppOpRequest) returns (AppOpReply) {}
  rpc Start (AppStatusRequest) returns (AppStatusReply) {}
  rpc Stop (AppStatusRequest) returns (AppStatusReply) {}
}

message Application {
  string uid = 1;
  string name = 2;
  string intro = 3;
  string image = 4;
  string version = 5;
  repeated int32 port = 6;
  string config = 7;
  string depends = 8;
}

message ListRequest {
  string name = 1;
}

message ListResponse {
  repeated Application items = 1;
  int64 total = 2;
}

message AppOpRequest{
  uint64 id = 1;
  enum Operation {
    OPERATION_UNSPECIFIED = 0;
    OPERATION_INSTALL = 1;
    OPERATION_UNINSTALL = 2;
    OPERATION_UPGRADE = 3;
  }
  Operation op = 4;
}

message AppOpReply {

}

message AppStatusRequest{
  uint64 id = 1;
  enum AppStatus {
    APP_STATUS_UNSPECIFIED = 0;
    APP_STATUS_RUNNING = 1;
    APP_STATUS_STOPPED = 2;
    APP_STATUS_UPGRADING = 3;
  }
  AppStatus status = 2;
}

message AppStatusReply {

}